--- a/modulos/modulo_dicPrior.tex
+++ b/modulos/modulo_dicPrior.tex
@@ -1,5 +1,10 @@
 \section{Módulo Diccionario de Prioridad de atrape}
-	Description %%TODO 
+
+Este diccionario utiliza dos criterios de ordenamiento: por la clave y por el significado. Esto permite definir, obtener y remover cualquier elemento al igual que buscar el mínimo elemento en tiempo logarítmico.
+
+En el ordenamiento por significado, para los casos en los que hay dos significados iguales, se utiliza nuevamente la clave.
+
+Usaremos $\#j$ para denotar la cantidad de entradas del diccionario.
 
 \begin{Interfaz}
 	\textbf{se explica con}: \tadNombre{Diccionario(Jugador, Nat)}. 
@@ -16,33 +21,32 @@
 	\InterfazFuncion{Definir}{\Inout{p}{prior}, \In{j}{jugador}, \In{c}{nat}}{}
 	[$p \igobs p_0$]
 	{$p \igobs$ definir($j, c, p_0$)}
-	[$log(\#j)$]
+	[$O(log(\#j))$]
 	[define la cantidad de pokemons de un jugador en el diccionario.]
 	[se almacenan copias de $j$ y $c$.]
 
 	\InterfazFuncion{Definido?}{\In{p}{prior}, \In{j}{jugador}}{bool}
 	{$res \igobs$ def?($j, p$)]}
-	[$log(\#j)$]
+	[$O(log(\#j))$]
 	[devuelve \texttt{true} si el jugador esta definido en el diccionario.]
 
 	\InterfazFuncion{Borrar}{\Inout{p}{prior}, \In{j}{jugador}}{}
 	[$p \igobs p_0 \land$ def?($j, d_0$)]
 	{$p \igobs$ borrar($j, p_0$)}
-	[$log(\#j)$]
+	[$O(log(\#j))$]
 	[borra un jugador del diccionario.]
 
 	\InterfazFuncion{Claves}{\In{p}{prior}}{conj(string)}
 	{alias($res =$ claves($p$))}
-	[]%O de N
+	[$O(\#j)$]
 	[devuelve el conjunto de los jugadores del diccionario.]
 	[$res$ no es modificable.]
 
 	\InterfazFuncion{Menor}{\Inout{p}{prior}}{jugador}
 	[$\neg\emptyset$?(claves($p$))]
 	{$res \igobs$ menor($p$, claves($p$))}
-	[$log(\#j)$]
+	[$O(log(\#j))$]
 	[devuelve el jugador con menos pokemons en el diccionario]
-	[]
 
   \TituloDis{Especificación de las operaciones auxiliares utilizadas en la interfaz}
 
@@ -70,11 +74,14 @@
 \begin{Representacion}
 	\TituloDis{Representación de prior}
 
-	\begin{Estructura}{ prior }[ePrior]
-		\begin{Tupla}[ePrior]
+	\begin{Estructura}{prior}[dicPri]
+		\begin{Tupla}[dicPri]
 			\tupItem{raizJugadores}{puntero(Nodo)}
 			\tupItem{raizCantidad}{puntero(Nodo)}
 		\end{Tupla}
+
+		~ 
+
 		\begin{Tupla}[Nodo]
 			\tupItem{hijoIzq}{puntero(Nodo)}
 			\tupItem{hijoDer}{puntero(Nodo)}				
@@ -105,20 +112,17 @@
 	\end{enumerate}
 	
 
-	\Rep[ePrior][e]{
-		sinRepetidos(e.raizJugadores, $\emptyset$) $\land$\\
-		sinRepetidos(e.raizCantidad, $\emptyset$) $\land$\\
-		ABB?(e.raizJugadores) $\land$\\
-		altoValido?(e.raizJugadores) $\land$\\
-		ABB?(e.raizCantidad) $\land$\\
-		altoValido?(e.raizCantidad) $\land$\\
+	\Rep[dicPri][e]{
+		sinRepetidos(e.raizJugadores, $\emptyset$) $\land$ sinRepetidos(e.raizCantidad, $\emptyset$) $\land$\\
+		ABB?(e.raizJugadores) $\land$ altoValido?(e.raizJugadores) $\land$\\
+		ABBespecial?(e.raizCantidad) $\land$ altoValido?(e.raizCantidad) $\land$\\
 		($\forall$ j: jugador) (definido?(j, e.raizJugadores) = definido?(j, e.raizCantidad) $\yluego$ \\
 			definido?(j, e.raizJugadores) $\impluego$ obtener(j, e.raizJugadores) = obtener(j, e.raizCantidad))
 	}
 
 	\TituloDis{Función de Abstracción}
 
-	\Abs[ePrior]{prior}[e]{d}
+	\Abs[dicPri]{prior}[e]{d}
 	{($\forall j$: jugador)
 	(def?(j, d) = definido?(j, e.raizJugadores) $\yluego$ \\
 	(def?(j, d) $\impluego$ obtener(j, d) = obtener(j, e.raizJugadores)))
@@ -131,7 +135,7 @@
 	\tadOperacion{menor?}{puntero(Nodo)/padre, puntero(Nodo)/hijo}{bool}{padre $\neq$ NULL}
 	\tadOperacion{ABBespecial?}{puntero(Nodo)/nodo}{bool}{}
 	\tadOperacion{menorEspecial?}{puntero(Nodo)/padre, puntero(Nodo)/hijo}{bool}{padre $\neq$ NULL}
-	\tadOperacion{altoValido?}(puntero(nodo)){bool}{}
+	\tadOperacion{altoValido?}{puntero(nodo)}{bool}{}
 	\tadOperacion{mayorAltura}{nat, nat}{nat}{}
 	\tadOperacion{factorDeBalanceo}{nat, nat}{nat}{}
 	\tadOperacion{cantidadHijos}{puntero(Nodo)}{nat}{}
@@ -141,7 +145,7 @@
  	~
 
 	\tadAxioma{sinRepetidos(padre, ids)}{
-		padre $\neq$ NULL $\oluego$( padre.id $\not\in$ ids $\land$ \\
+		padre $=$ NULL $\oluego$(padre.id $\not\in$ ids $\land$ \\
 		sinRepetidos(padre.hijoIzq, Ag(padre.id, c)) $\land$ \\
 		sinRepetidos(padre.hijoDer, Ag(padre.id, c)))
 	}
@@ -150,16 +154,16 @@
 
 	\tadAxioma{ABB?(nodo)}{
 		(nodo = NULL) $\oluego$ \\ 
-		(menor?(nodo, nodo.hijoIzq) $\land$ $\neq$menor?(nodo, nodo.hijoDer) $\land$ \\
-		ABB?(nodo.hijoIzq) $\land$ ABB?(nodo.hijoDer))
+		(menor?(nodo, (*nodo).hijoDer) $\land$ $\neg$menor?(nodo, (*nodo).hijoIzq) $\land$ \\
+		ABB?((*nodo).hijoIzq) $\land$ ABB?((*nodo).hijoDer))
 	}
 
 	~
 
 	\tadAxioma{ABBespecial?(nodo)}{
 		(nodo = NULL) $\oluego$ \\ 
-		(menorEspecial?(nodo, nodo.hijoIzq) $\land$ $\neq$menorEspecial?(nodo, nodo.hijoDer) $\land$ \\
-		ABBespecial?(nodo.hijoIzq) $\land$ ABBespecial?(nodo.hijoDer))
+		(menorEspecial?(nodo, (*nodo).hijoDer) $\land$ $\neg$menorEspecial?(nodo, (*nodo).hijoIzq) $\land$ \\
+		ABBespecial?((*nodo).hijoIzq) $\land$ ABBespecial?((*nodo).hijoDer))
 	}
 
 	~
@@ -180,8 +184,8 @@
 
 	\tadAxioma{altoValido?(nodo)}{
 		nodo = NULL $\oluego$ \\
-		(nodo.alto = mayorAltura(nodo.hijoIzq, nodo.hijoDer) + 1 $\land$ \\
-		factorDeBalanceo(cantidadHijos(nodo.hijoIzq), cantidadHijos(nodo.hijoDer)) $\leq$ 1 
+		((*nodo).alto = mayorAltura((*nodo).hijoIzq, (*nodo).hijoDer) + 1 $\land$ \\
+		factorDeBalanceo(cantidadHijos((*nodo).hijoIzq), cantidadHijos((*nodo).hijoDer)) $\leq$ 1 
 	}
 
 	~
@@ -200,8 +204,8 @@
 		{\IF nodo = NULL THEN
 			0
 		ELSE
-			$\beta$(nodo.hijoIzq $\neq$ NULL) + cantidadHijos(nodo.hijoIzq) + \\
-			$\beta$(nodo.hijoDer $\neq$ NULL) + cantidadHijos(nodo.hijoDer)		
+			$\beta$((*nodo).hijoIzq $\neq$ NULL) + cantidadHijos((*nodo).hijoIzq) + \\
+			$\beta$((*nodo).hijoDer $\neq$ NULL) + cantidadHijos((*nodo).hijoDer)		
 		FI}
 	}
 
@@ -243,239 +247,343 @@
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
-		\caption{\algoritmo{iVacio}{}{prior}}
-		res.raizJugadores $\leftarrow$ NULL\;
-		res.raizCantidad $\leftarrow$ NULL\;
+		\caption{\algoritmo{iVacio}{}{dicPri}}
+		res.raizJugadores $\leftarrow$ NULL\OdeLinea{1}
+		res.raizCantidad $\leftarrow$ NULL\OdeLinea{1}
 	\end{algorithm}
+
+	\complejidad: $O(1)$
+
+	\justifcomp: solo se inicializan los punteros como nulos.
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
-		\caption{\algoritmo{iDefinido?}{\In{p}{prior}, \In{j}{jugador}}{bool}}
-		res $\leftarrow$ BuscarJ(p.raizJugadores) $\neq$ NULL\;
+		\caption{\algoritmo{iDefinido?}{\In{p}{dicPri}, \In{j}{jugador}}{bool}}
+		res $\leftarrow$ BuscarJ(p.raizJugadores) $\neq$ NULL\OdeLinea{log(\#j)}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
-		\caption{\algoritmo{iDefinir}{\Inout{p}{prior}, \In{j}{jugador}, \In{n}{nat}}{}}
+		\caption{\algoritmo{iDefinir}{\Inout{p}{dicPri}, \In{j}{jugador}, \In{n}{nat}}{}}
 		\If{Definido?(p, j)}{
-			Borrar(p, j)\;
+			Borrar(p, j)\OdeLinea{log(\#j)}
 		}
-		InsertarJ(j, n, p.raizJugadores)\;
-		InsertarN(j, n, p.raizCantidad)\;
+		p.raizJugadores $\leftarrow$ InsertarJ(j, n, p.raizJugadores)\OdeLinea{log(\#j)}
+		p.raizCantidad $\leftarrow$ InsertarN(j, n, p.raizCantidad)\OdeLinea{log(\#j)}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
-		\caption{\algoritmo{iBorrar}{\Inout{p}{prior}, \In{j}{jugador}}{}}
-		puntero(Nodo): nodo $\leftarrow$ BuscarJ(j, p.raizJugadores)\;
-		RemoverJ(j, p.raizJugadores)\;
-		RemoverN(j, nodo.cantPokemons, p.raizCantidad)\;
+		\caption{\algoritmo{iBorrar}{\Inout{p}{dicPri}, \In{j}{jugador}}{}}
+		puntero(Nodo): nodo $\leftarrow$ BuscarJ(j, p.raizJugadores)\OdeLinea{log(\#j)}
+		p.raizCantidad $\leftarrow$ RemoverN(j, (*nodo).cantPokemons, p.raizCantidad)\OdeLinea{log(\#j)}
+		p.raizJugadores $\leftarrow$ RemoverJ(j, p.raizJugadores)\OdeLinea{log(\#j)}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
-		\caption{\algoritmo{iClaves}{\In{p}{prior}}{conj(string)}}
+		\caption{\algoritmo{iMenor}{\In{p}{dicPri}}{jugador}}
+		puntero(Nodo): nodo $\leftarrow$ BuscarMinimo(j, p.raizCantidad)\OdeLinea{log(\#j)}
+		res $\leftarrow$ (*nodo).id\OdeLinea{1}
 	\end{algorithm}
 
-	\begin{algorithm}[H]
-		\NoCaptionOfAlgo
-		\caption{\algoritmo{iMenor}{\In{p}{prior}}{jugador}}
-		puntero(Nodo): nodo $\leftarrow$ BuscarMinimo(j, p.raizCantidad)\;
-		res $\leftarrow$ nodo.id\;
-	\end{algorithm}
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{BuscarJ}{\In{j}{jugador}, \In{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
-		\eIf{nodo = NULL $\oluego$ nodo.id = jugador}{
-			res $\leftarrow$ nodo\;
-		}{
-			\eIf{j $<$ nodo.id}{
-				res $\leftarrow$ BuscarJ(j, nodo.hijoIzq)\;
-			}{
-				res $\leftarrow$ BuscarJ(j, nodo.hijoDer)\;
-			}
+		\uIf{nodo = NULL \textbf{or} (*nodo).id = jugador}{
+			res $\leftarrow$ nodo\OdeLinea{1}
+		}
+		\uElseIf{j $<$ (*nodo).id}{
+			res $\leftarrow$ BuscarJ(j, (*nodo).hijoIzq)\OdeLinea{log(\#j)}
+		}
+		\Else{
+			res $\leftarrow$ BuscarJ(j, (*nodo).hijoDer)\OdeLinea{log(\#j)}
 		}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{InsertarJ}{\In{j}{jugador}, \In{n}{nat}, \Inout{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
 		\eIf{nodo = NULL}{
-			res $\leftarrow$ CrearNodo(j, n)\;
+			res $\leftarrow$ CrearNodo(j, n)\OdeLinea{1}
 		}{	
 			\eIf{j $<$ n.id}{
-				nodo.hijoIzq $\leftarrow$ InsertarJ(j, n, nodo.hijoIzq)\;
+				(*nodo).hijoIzq $\leftarrow$ InsertarJ(j, n, (*nodo).hijoIzq)\OdeLinea{log(\#j)}
 			}{
-				nodo.hijoDer $\leftarrow$ InsertarJ(j, n, nodo.hijoDer)\;
+				(*nodo).hijoDer $\leftarrow$ InsertarJ(j, n, (*nodo).hijoDer)\OdeLinea{log(\#j)}
 			}
-			res $\leftarrow$ Balancear(nodo)\;
+			res $\leftarrow$ Balancear(nodo)\OdeLinea{1}
 		}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{RemoverJ}{\In{j}{jugador}, \In{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
-		\eIf{nodo = NULL}{
-			res $\leftarrow$ nodo\;
-		}{
-			\eIf{j $<$ nodo.id}{
-				nodo.hijoIzq $\leftarrow$ RemoverJ(j, nodo.hijoIzq)\;
-				res $\leftarrow$ Balancear(nodo)\;
+		\uIf{nodo = NULL}{
+			res $\leftarrow$ nodo\OdeLinea{1}
+		}
+		\uElseIf{j $<$ (*nodo).id}{
+			(*nodo).hijoIzq $\leftarrow$ RemoverJ(j, (*nodo).hijoIzq)\OdeLinea{log(\#j)}
+			res $\leftarrow$ Balancear(nodo)\OdeLinea{1}
+		}
+		\uElseIf{j $>$ (*nodo).id}{
+			(*nodo).hijoDer $\leftarrow$ RemoverJ(j, (*nodo).hijoDer)\OdeLinea{log(\#j)}
+			res $\leftarrow$ Balancear(nodo)\OdeLinea{1}
+		}
+		\Else{
+			puntero(Nodo): i $\leftarrow$ (*nodo).hijoIzq\OdeLinea{1}
+			puntero(Nodo): d $\leftarrow$ (*nodo).hijoDer\OdeLinea{1}
+			\eIf{d = NULL}{
+				res $\leftarrow$ i\OdeLinea{1}
 			}{
-				\eIf{j $>$ nodo.id}{
-					nodo.hijoDer $\leftarrow$ RemoverJ(j, nodo.hijoDer)\;
-					res $\leftarrow$ Balancear(nodo)\;
-				}{
-					puntero(Nodo): i $\leftarrow$ nodo.hijoIzq\;
-					puntero(Nodo): d $\leftarrow$ nodo.hijoDer\;
-					delete nodo\;
-					\eIf{ d = NULL}{
-						res $\leftarrow$ i\;
-					}{	
-						puntero(Nodo): minimo $\leftarrow$ BuscarMinimo(d)\;
-						minimo.hijoDer $\leftarrow$ RemoverMinimo(d)\;
-						minimo.hijoIzq $\leftarrow$ i\;
-						res $\leftarrow$ Balancear(minimo)\;
-					}
-				}
+				puntero(Nodo): minimo $\leftarrow$ BuscarMinimo(d)\OdeLinea{log(\#j)}
+				minimo.hijoDer $\leftarrow$ RemoverMinimo(d)\OdeLinea{log(\#j)}
+				minimo.hijoIzq $\leftarrow$ i\OdeLinea{1}
+				res $\leftarrow$ Balancear(minimo)\OdeLinea{1}
 			}
 		}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{BuscarMinimo}{\In{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
-		\eIf{nodo.hijoIzq = NULL}{
-			res $\leftarrow$ nodo\;
+		\eIf{(*nodo).hijoIzq = NULL}{
+			res $\leftarrow$ nodo\OdeLinea{1}
 		}{
-			res $\leftarrow$ BuscarMinimo(nodo.hijoIzq)\;
+			res $\leftarrow$ BuscarMinimo((*nodo).hijoIzq)\OdeLinea{log(\#j)}
 		}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{RemoverMinimo}{\In{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
-		\eIf{nodo.hijoIzq = NULL}{
-			res $\leftarrow$ nodo.hijoDer\;
+		\eIf{(*nodo).hijoIzq = NULL}{
+			res $\leftarrow$ (*nodo).hijoDer\OdeLinea{1}
 		}{
-			nodo.hijoIzq = RemoverMinimo(nodo.hijoIzq)\;
-			res $\leftarrow$ balance(nodo)\;
+			(*nodo).hijoIzq = RemoverMinimo((*nodo).hijoIzq)\OdeLinea{log(\#j)}
+			res $\leftarrow$ Balancear(nodo)\OdeLinea{1}
 		}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{BuscarN}{\In{j}{jugador}, \In{n}{nat} \In{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
-		\eIf{nodo = NULL $\oluego$ (nodo.id = jugador $\land$ nodo.cantPokemons = n)}{
-			res $\leftarrow$ nodo\;
+		\eIf{nodo = NULL \textbf{or} ((*nodo).id = jugador \textbf{and} (*nodo).cantPokemons = n)}{
+			res $\leftarrow$ nodo\OdeLinea{1}
 		}{
-			\eIf{n $<$ nodo.cantPokemons $\lor$ (n = nodo.cantPokemons $\land$ j $<$ nodo.id)}{
-				res $\leftarrow$ BuscarN(j, n, nodo.hijoIzq)\;
+			\eIf{n $<$ (*nodo).cantPokemons \textbf{or} (n = (*nodo).cantPokemons \textbf{and} j $<$ (*nodo).id)}{
+				res $\leftarrow$ BuscarN(j, n, (*nodo).hijoIzq)\OdeLinea{log(\#j)}
 			}{
-				res $\leftarrow$ BuscarN(j, n, nodo.hijoDer)\;
+				res $\leftarrow$ BuscarN(j, n, (*nodo).hijoDer)\OdeLinea{log(\#j)}
 			}
 		}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{InsertarN}{\In{j}{jugador}, \In{n}{nat}, \Inout{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
 		\eIf{nodo = NULL}{
-			res $\leftarrow$ CrearNodo(j, n)\;
+			res $\leftarrow$ CrearNodo(j, n)\OdeLinea{1}
 		}{	
-			\eIf{n $<$ nodo.cantPokemons $\lor$ (n = nodo.cantPokemons $\land$ j $<$ nodo.id)}{
-				nodo.hijoIzq $\leftarrow$ InsertarN(j, n, nodo.hijoIzq)\;
+			\eIf{n $<$ (*nodo).cantPokemons \textbf{or} (n = (*nodo).cantPokemons \textbf{and} j $<$ (*nodo).id)}{
+				(*nodo).hijoIzq $\leftarrow$ InsertarN(j, n, (*nodo).hijoIzq)\OdeLinea{log(\#j)}
 			}{
-				nodo.hijoDer $\leftarrow$ InsertarN(j, n, nodo.hijoDer)\;
+				(*nodo).hijoDer $\leftarrow$ InsertarN(j, n, (*nodo).hijoDer)\OdeLinea{log(\#j)}
 			}
-			res $\leftarrow$ Balancear(nodo)\;
+			res $\leftarrow$ Balancear(nodo)\OdeLinea{1}
 		}
 	\end{algorithm}
 
+	~
+
+	\begin{algorithm}[H]
+		\NoCaptionOfAlgo
+		\caption{\algoritmo{RemoverN}{\In{j}{jugador}, \In{n}{nat}, \In{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
+		\uIf{nodo = NULL}{
+			res $\leftarrow$ nodo\OdeLinea{1}
+		}
+		\uElseIf{n $<$ (*nodo).cantPokemons \textbf{or} (n = (*nodo).cantPokemons \textbf{and} j $<$ (*nodo).id)}{
+			(*nodo).hijoIzq $\leftarrow$ RemoverN(j, n, (*nodo).hijoIzq)\OdeLinea{log(\#j)}
+			res $\leftarrow$ Balancear(nodo)\OdeLinea{1}
+		}
+		\uElseIf{n $>$ (*nodo).cantPokemons \textbf{or} (n = (*nodo).cantPokemons \textbf{and} j $>$ (*nodo).id)}{
+			(*nodo).hijoDer $\leftarrow$ RemoverN(j, n, (*nodo).hijoDer)\OdeLinea{log(\#j)}
+			res $\leftarrow$ Balancear(nodo)\OdeLinea{1}
+		}
+		\Else{
+			puntero(Nodo): i $\leftarrow$ (*nodo).hijoIzq\OdeLinea{1}
+			puntero(Nodo): d $\leftarrow$ (*nodo).hijoDer\OdeLinea{1}
+			\eIf{d = NULL}{
+				res $\leftarrow$ i\OdeLinea{1}
+			}{	
+				puntero(Nodo): minimo $\leftarrow$ BuscarMinimo(d)\OdeLinea{log(\#j)}
+				minimo.hijoDer $\leftarrow$ RemoverMinimo(d)\OdeLinea{log(\#j)}
+				minimo.hijoIzq $\leftarrow$ i\OdeLinea{1}
+				res $\leftarrow$ Balancear(minimo)\OdeLinea{1}
+			}
+		}
+	\end{algorithm}
+	
+	\complejidad: $O(log(\#j))$
+
+	\justifcomp: cada llamada recursiva a cada subarbol reduce el tamaño de la entrada aproximadamente por la mitad (ya que antes de la inserción, el arbol se encuentra ordenado como ABB y balanceado con invariante de AVL).
+
+	~
+
+	\begin{algorithm}[H]
+		\NoCaptionOfAlgo
+		\caption{\algoritmo{iClaves}{\In{p}{dicPri}}{conj(Jugador)}}
+		res $\leftarrow$ Vacio()\OdeLinea{1}
+		AgregarClaves(p.raizJugadores, res)\OdeLinea{\#j}
+	\end{algorithm}
+
+	~
+
+	\begin{algorithm}[H]
+		\NoCaptionOfAlgo
+		\caption{\algoritmo{AgregarClaves}{\In{nodo}{Nodo}, \Inout{c}{conj(Jugador)}}{}}
+		\If{nodo $\neq$ NULL}{
+			AgregarRapido(c, (*nodo).id)\OdeLinea{1}
+			AgregarClaves((*nodo).hijoIzq, c)\OdeLinea{\#j}
+			AgregarClaves((*nodo).hijoDer, c)\OdeLinea{\#j}
+		}
+	\end{algorithm}
+	
+	\complejidad: $O(\#j)$
+
+	\justifcomp: el arbol no almacena las claves en una estructura separada, así que las mismas deben obtenerse manualmente recorriendo todo el arbol.
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{CrearNodo}{\In{j}{jugador}, \In{n}{nat}}{puntero(Nodo)}}
-		Nodo: nuevo\;
-		nuevo.hijoIzq $\leftarrow$ NULL\;
-		nuevo.hijoDer $\leftarrow$ NULL\;
-		nuevo.alto $\leftarrow$ 1\;
-		nuevo.id $\leftarrow$ j\;
-		nuevo.cantPokemons $\leftarrow$ n\;
-		res $\leftarrow$ \&nuevo\;
+		Nodo: nuevo\OdeLinea{1}
+		nuevo.hijoIzq $\leftarrow$ NULL\OdeLinea{1}
+		nuevo.hijoDer $\leftarrow$ NULL\OdeLinea{1}
+		nuevo.alto $\leftarrow$ 1\OdeLinea{1}
+		nuevo.id $\leftarrow$ j\OdeLinea{1}
+		nuevo.cantPokemons $\leftarrow$ n\OdeLinea{1}
+		res $\leftarrow$ \&nuevo\OdeLinea{1}
 	\end{algorithm}
+	
+	\complejidad: $O(1)$
 
+	\justifcomp: solo se crea e inicializa un (*nodo). Como inicialmente se agrega como hoja del arbol, su altura es 1.
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{Balancear}{\Inout{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
-		ArreglarAlto(nodo)\;
-		\eIf{FactorDeBalance(nodo) = 2}{
-			\If{FactorDeBalance(nodo.hijoDer) $<$ 0}{
-				nodo.hijoDer $\leftarrow$ rotarDer(nodo.hijoDer);
+		ArreglarAlto(nodo)\OdeLinea{1}
+		nat: alturaIzq $\leftarrow$ Altura((*nodo).hijoIzq)\OdeLinea{1}
+		nat: alturaDer $\leftarrow$ Altura((*nodo).hijoDer)\OdeLinea{1}
+		\uIf{alturaDer $>$ alturaIzq \textbf{and} alturaDer - alturaIzq = 2}{
+			\If{Altura((*nodo).hijoDer.hijoIzq) $>$ Altura((*nodo).hijoDer.hijoDer)}{
+				(*nodo).hijoDer $\leftarrow$ rotarDer((*nodo).hijoDer\OdeLinea{1}
 			}
-			res $\leftarrow$ rotarIzq(nodo)\;
-		}{
-			\eIf{FactorDeBalance(nodo) = -2}{
-				\If{FactorDeBalance(nodo.hijoDer) $>$ 0}{
-					nodo.hijoIzq $\leftarrow$ rotarIzq(nodo.hijoIzq);
-				}
-				res $\leftarrow$ rotarDer(nodo)\;
-			}{
-				res $\leftarrow$ nodo\;
+			res $\leftarrow$ rotarIzq(nodo)\OdeLinea{1}
+		}
+		\uElseIf{alturaIzq $>$ alturaDer \textbf{and} alturaIzq - alturaDer = 2}{
+			\If{Altura((*nodo).hijoIzq.hijoDer) $>$ Altura((*nodo).hijoIzq.hijoIzq)}{
+				(*nodo).hijoIzq $\leftarrow$ rotarIzq((*nodo).hijoIzq)\OdeLinea{1}
 			}
+			res $\leftarrow$ rotarDer(nodo)\OdeLinea{1}
+		}
+		\Else{
+			res $\leftarrow$ nodo\OdeLinea{1}
 		}
 	\end{algorithm}
+	
+	\complejidad: $O(1)$
+
+	\justifcomp: balancear consiste exclusivamente en comparasiones y rotaciones (asignaciones en $\Theta(1)$).
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{ArreglarAlto}{\Inout{nodo}{puntero(Nodo)}}{}}
-		nat: alturaIzq $\leftarrow$ Altura(p.hijoIzq)\;
-		nat: alturaDer $\leftarrow$ Altura(p.hijoDer)\;
+		nat: alturaIzq $\leftarrow$ Altura((*nodo).hijoIzq)\OdeLinea{1}
+		nat: alturaDer $\leftarrow$ Altura((*nodo).hijoDer)\OdeLinea{1}
 		\eIf{alturaIzq $<$ alturaDer}{
-			nodo.altura $\leftarrow$  alturaDer + 1\;
+			(*nodo).altura $\leftarrow$ alturaDer + 1\OdeLinea{1}
 		}{
-			nodo.altura $\leftarrow$  alturaIzq + 1\;
+			(*nodo).altura $\leftarrow$ alturaIzq + 1\OdeLinea{1}
 		}
 	\end{algorithm}
+	
+	\complejidad: $O(1)$
+
+	\justifcomp: solo se realizan comparaciones para  las alturas de los hijos
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{Altura}{\In{nodo}{puntero(Nodo)}}{nat}}
 		\eIf{nodo = NULL}{
-			res $\leftarrow$ 0\;
+			res $\leftarrow$ 0\OdeLinea{1}
 		}{
-			res $\leftarrow$ nodo.alto\;
+			res $\leftarrow$ (*nodo).alto\OdeLinea{1}
 		}
 	\end{algorithm}
+	
+	\complejidad: $O(1)$
 
-	\begin{algorithm}[H]
-		\NoCaptionOfAlgo
-		\caption{\algoritmo{FactorDeBalance}{\In{nodo}{puntero(Nodo)}}{nat}}
-		res $\leftarrow$ Altura(nodo.hijoDer) - Altura(nodo.hijoIzq)\;
-	\end{algorithm}
+	\justifcomp: solo se verifica si es nulo o se lee un componente.
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{rotarDer}{\In{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
-		puntero(nodo) aux $\leftarrow$ nodo.hijoIzq\;
-		nodo.hijoIzq $\leftarrow$ aux.hijoDer\;
-		aux.hijoDer $\leftarrow$ nodo\;
-		ArreglarAlto(nodo)\;
-		ArreglarAlto(aux)\;
-		res $\leftarrow$ aux\;
+		puntero(nodo) : aux $\leftarrow$ (*nodo).hijoIzq\OdeLinea{1}
+		(*nodo).hijoIzq $\leftarrow$ aux.hijoDer\OdeLinea{1}
+		aux.hijoDer $\leftarrow$ nodo\OdeLinea{1}
+		ArreglarAlto(nodo)\OdeLinea{1}
+		ArreglarAlto(aux)\OdeLinea{1}
+		res $\leftarrow$ aux\OdeLinea{1}
 	\end{algorithm}
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{rotarIzq}{\In{nodo}{puntero(Nodo)}}{puntero(Nodo)}}
-		puntero(nodo) aux $\leftarrow$ nodo.hijoDer\;
-		nodo.hijoDer $\leftarrow$ aux.hijoIzq\;
-		aux.hijoIzq $\leftarrow$ nodo\;
-		ArreglarAlto(nodo)\;
-		ArreglarAlto(aux)\;
-		res $\leftarrow$ aux\;
+		puntero(nodo) : aux $\leftarrow$ (*nodo).hijoDer\OdeLinea{1}
+		(*nodo).hijoDer $\leftarrow$ aux.hijoIzq\OdeLinea{1}
+		aux.hijoIzq $\leftarrow$ nodo\OdeLinea{1}
+		ArreglarAlto(nodo)\OdeLinea{1}
+		ArreglarAlto(aux)\OdeLinea{1}
+		res $\leftarrow$ aux\OdeLinea{1}
 	\end{algorithm}
+	
+	\complejidad: $O(1)$
+
+	\justifcomp: las rotaciones son una serie de asignaciones de punteros ($\Theta(1)$). El invariante de orden del arbol de búsqueda se preserva luego de cada rotación. 
 
 \end{Algoritmos}
