--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -493,6 +493,7 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iPokémonEnPos}{\In{j}{pokego}, \In{c}{coor}}{pokemon}}
 		%% ESTUPIDA GRILLA
+		res $\leftarrow$ j.grillaPos[Latitud(c)][Longitud(c)].pokemon\;
 	\end{algorithm}
 
 	\complejidad: $O()$
