--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -339,6 +339,7 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 		res.sanciones $\leftarrow$ 0\;
 		res.conectado? $\leftarrow$ false\;
 		% res.posicion $\leftarrow$ CREO QUE NADA, PREGUNTAR SI SE PUEDE DEJAR SIN INIT
+		res.cantPokemons $\leftarrow$ 0\;
 		res.pokemonsCapturados $\leftarrow$ CrearDiccionario()\;
 	\end{algorithm}
 
@@ -379,18 +380,35 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{RemoverDeColas}{\Inout{j}{pokego}, \In{e}{jugador}}{}}
-		coor: c $\leftarrow$ (*j.jugadores[e]).posPokeCaptura\;
+		coor: c $\leftarrow$ (*j.jugadores[e]).posicion\;
 		nat : i $\leftarrow$ 0\;
-		\While{i $<$ 5}{
+		\While{i $<$ 3}{
 			nat : j $\leftarrow$ 0\;
-			\While{DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) + j)) $\leq$ 4}{
-				\If{PosExistente(j.mapa, CrearCoor(Latitud(c) + i, Longitud(c) + j))}{
-					Borrar(j.grillaPos[i][j].jugEsperandoCaptura, e)\;
+			\While{j $<$ 3}{
+				\If{DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) + j)) $\leq$ 4}{
+					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) + j)}{
+						Borrar(j.grillaPos[Latitud(c) + i][Longitud(c) + j].jugEsperandoCaptura, e)\;
+					}
+				} 
+				\If {DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) - j)) $\leq$ 4}{
+					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) - j)}{
+						Borrar(j.grillaPos[Latitud(c) + i][Longitud(c) - j].jugEsperandoCaptura, e)\;
+					}
+				} 
+				\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) + j)) $\leq$ 4}{
+					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) + j)}{
+						Borrar(j.grillaPos[Latitud(c) - i][Longitud(c) + j].jugEsperandoCaptura, e)\;
+					}
+				} 
+				\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) - j)) $\leq$ 4}{
+						\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) - j)}{
+							Borrar(j.grillaPos[Latitud(c) - i][Longitud(c) - j].jugEsperandoCaptura, e)\;
+					}
 				}
-				j $\leftarrow$ j + 1\;
-			}
-			i $\leftarrow$ i + 1\;
-		}
+			j $\leftarrow$ j+1\;	
+			}							
+		i $\leftarrow$ i+1\;
+		}				
 	\end{algorithm}
 
 	\complejidad: $O()$
@@ -402,19 +420,35 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{AgregarAColas}{\Inout{j}{pokego}, \In{e}{jugador}}{}}
-			coor: c $\leftarrow$ (*j.jugadores[e]).posPokeCaptura\;
+			coor: c $\leftarrow$ (*j.jugadores[e]).posicion\;
 			nat : i $\leftarrow$ 0\;
-			\While{i $<$ 5}{
+			\While{i $<$ 3}{
 				nat : j $\leftarrow$ 0\;
-				\While{DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) + j)) $\leq$ 4}{
-					\If{PosExistente(j.mapa, CrearCoor(Latitud(c) + i, Longitud(c) + j))}{
-						Definir(j.grillaPos[i][j].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\;
+				\While{j $<$ 3}{
+				\If{DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) + j)) $\leq$ 4}{
+					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) + j)}{
+						Definir(j.grillaPos[Latitud(c) + i][Longitud(c) + j].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\;
 					}
-					j $\leftarrow$ j + 1\;
+				} 
+				\If {DistEuclidea(c, CrearCoor(Latitud(c) + i, Longitud(c) - j)) $\leq$ 4}{
+					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) + i, Longitud(c) - j)}{
+						Definir(j.grillaPos[Latitud(c) + i][Longitud(c) - j].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\;
+					}
+				} 
+				\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) + j)) $\leq$ 4}{
+					\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) + j)}{
+						Definir(j.grillaPos[Latitud(c) - i][Longitud(c) + j].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\;
+					}
+				} 
+				\If {DistEuclidea(c, CrearCoor(Latitud(c) - i, Longitud(c) - j)) $\leq$ 4}{
+						\If{Pertenece(j.posConPokemons, CrearCoor(Latitud(c) - i, Longitud(c) - j)}{
+							Definir(j.grillaPos[Latitud(c) - i][Longitud(c) - j].jugEsperandoCaptura, e, (*j.jugadores[e]).cantPokemons)\;
+					}
 				}
-				i $\leftarrow$ i + 1\;
-			}
-			Definir(j.grillaPos[Latitud(c)][Longitud(c)].jugEsperandoCaptura, (*j.jugadores[e]))
+			j $\leftarrow$ j+1\;	
+			}							
+		i $\leftarrow$ i+1\;
+		}	
 	\end{algorithm}
 
 	\complejidad: $O()$
